--- a/travel-planner-pro/.github/workflows/deploy.yml
+++ b/travel-planner-pro/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: [ stable-version ]
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
@@ -31,9 +31,11 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./travel-planner-pro
 
       - name: Build
         run: npm run build
+        working-directory: ./travel-planner-pro
         env:
           # These secrets are injected from GitHub Repository Secrets
           VITE_GEMINI_API_KEY: ${{ secrets.VITE_GEMINI_API_KEY }}
@@ -51,7 +53,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'
+          path: './travel-planner-pro/dist'
 
   deploy:
     environment:
